[gd_scene load_steps=4 format=3 uid="uid://dgw2ln358unw8"]

[ext_resource type="PackedScene" uid="uid://bx5u484amvy3c" path="res://Scenes/GameMainScreenScenes/GameScenes/DamSection/dam_item.tscn" id="1_2fc4b"]
[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/dam_section.gd" id="1_7ykd3"]
[ext_resource type="PackedScene" uid="uid://b3hoyangpmgmy" path="res://Scenes/GameMainScreenScenes/GameScenes/DamSection/dam_construction.tscn" id="2_o4jpu"]

[node name="DamSection" type="MarginContainer" groups=["DamSection"]]
custom_minimum_size = Vector2(798, 926)
offset_right = 798.0
offset_bottom = 926.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_7ykd3")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleMC" type="MarginContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20

[node name="DamsLabel" type="Label" parent="VBox/TitleMC"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Dams"

[node name="DamsHBox" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DamSelection" type="MarginContainer" parent="VBox/DamsHBox"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBox/DamsHBox/DamSelection"]
layout_mode = 2
color = Color(0.396078, 0.396078, 0.396078, 1)

[node name="MC" type="MarginContainer" parent="VBox/DamsHBox/DamSelection"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="DamSelectionVBox" type="HBoxContainer" parent="VBox/DamsHBox/DamSelection/MC"]
custom_minimum_size = Vector2(245, 0)
layout_mode = 2
theme_override_constants/separation = 13

[node name="DamItem1" parent="VBox/DamsHBox/DamSelection/MC/DamSelectionVBox" instance=ExtResource("1_2fc4b")]
layout_mode = 2

[node name="DamItem2" parent="VBox/DamsHBox/DamSelection/MC/DamSelectionVBox" instance=ExtResource("1_2fc4b")]
layout_mode = 2
DamType = 1

[node name="DamItem3" parent="VBox/DamsHBox/DamSelection/MC/DamSelectionVBox" instance=ExtResource("1_2fc4b")]
layout_mode = 2
DamType = 2

[node name="DamItem4" parent="VBox/DamsHBox/DamSelection/MC/DamSelectionVBox" instance=ExtResource("1_2fc4b")]
layout_mode = 2
DamType = 3

[node name="DamItem5" parent="VBox/DamsHBox/DamSelection/MC/DamSelectionVBox" instance=ExtResource("1_2fc4b")]
layout_mode = 2
DamType = 4

[node name="SmallDamConstruction" parent="VBox/DamsHBox" instance=ExtResource("2_o4jpu")]
layout_mode = 2

[node name="MediumDamConstruction" parent="VBox/DamsHBox" instance=ExtResource("2_o4jpu")]
visible = false
layout_mode = 2
DamType = 1

[node name="BigDamConstruction" parent="VBox/DamsHBox" instance=ExtResource("2_o4jpu")]
visible = false
layout_mode = 2
DamType = 2

[node name="GiantDamConstruction" parent="VBox/DamsHBox" instance=ExtResource("2_o4jpu")]
visible = false
layout_mode = 2
DamType = 3

[node name="MegaDamConstruction" parent="VBox/DamsHBox" instance=ExtResource("2_o4jpu")]
visible = false
layout_mode = 2
DamType = 4
